# Vimantra-AI-Mission-Planner

./: .env.development.example  .env.example  .env.production.example  .env.testing.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_PROCESS.md  ROADMAP.md  SECURITY.md  SUPPORT.md
backend/: pyproject.toml
backend/analytics/: __init__.py  calculations.py  constants.py  exceptions.py  models.py  service.py
backend/app/: dependencies.py  main.py
backend/app/models/: __init__.py  api.py  drone.py  mission.py
backend/app/routes/: drone.py  (+2 more)
backend/config/: defaults.py  environment.py  settings.py  validation.py
backend/logging/: __init__.py  audit.py  config.py  constants.py  context.py  filters.py  formatter.py  handlers.py  logger.py  middleware.py
backend/mission/: __init__.py  exceptions.py  validation_models.py  validation_rules.py  validator.py
backend/preflight/: __init__.py  checks.py  exceptions.py  models.py  service.py  status.py
backend/tests/: test_api_response_standard.py  test_drone_action.py  test_drone_api.py  test_drone_connection.py  test_health.py  test_logging.py  test_mission_analytics.py  test_mission_analytics_api.py  test_mission_api.py  test_mission_storage.py  test_mission_upload.py  test_mission_upload_api.py  test_mission_validation_api.py  test_mission_validation_engine_api.py  test_mission_validator.py  test_preflight.py  test_settings.py  test_telemetry.py  test_validation_engine.py
backend/validation/: __init__.py  config.py  models.py  rules.py  validator.py
(+72 files in other folders)
